borda can combine two ranking list according to weight

--- a/statistics.ipynb
+++ b/statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
       "christ_church_000429.png1248 785184\n",
       "223\n",
       "5063\n",
-      "percentage of more than half: 0.04404503258937389\n"
+      "percentage of more than a: 0.04404503258937389\n"
      ]
     }
    ],
@@ -209,8 +209,9 @@
     "#compute the percentage of privacy region, and store them to a dictionary\n",
     "dataset = \"/data/data-hulishuang/img-dataset/oxford_smeared/white/t155_p400/mask\"\n",
     "percentage_dic = {}\n",
-    "more_than_half = 0\n",
+    "more_than_a = 0\n",
     "total = 0\n",
+    "a = 0.5\n",
     "for f in os.listdir(dataset):\n",
     "    file_name = os.path.join(dataset,f)\n",
     "    mask = io.imread(file_name,as_gray = True)\n",
@@ -219,16 +220,15 @@
     "    black = np.count_nonzero(mask == 0)\n",
     "    percentage = np.true_divide(white,white+black)\n",
     "    percentage = np.around(percentage,decimals = 2)\n",
-    "    if percentage == 0:\n",
-    "        print(f + str(white)+' ' + str(black))\n",
-    "    if percentage > 0.5:\n",
-    "        more_than_half = more_than_half + 1\n",
+    "    \n",
+    "    if percentage > a:\n",
+    "        more_than_a = more_than_a + 1\n",
     "    percentage_dic[f[:-4]] =  percentage\n",
     "    total = total + 1\n",
     "    #print(percentage_dic)\n",
-    "print(more_than_half)\n",
+    "print(more_than_a)\n",
     "print(total)\n",
-    "print('percentage of more than half:',more_than_half/total)    \n",
+    "print('percentage of more than a:',more_than_a/total)    \n",
     "#print(percentage_dic)    \n",
     "\n",
     "#get query image for every rnk\n",
